<resources>
    <string name="app_name">Welearn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_rank">Rank</string>
    <string name="menu_score">Score</string>
    <string name="menu_profile">Profile</string>

    <string name="berhitung">Belajar Berhitung</string>
    <string name="menulis">Belajar Menulis Abjad</string>
    <string name="nama">Nama</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="JenisKelamin">Jenis Kelamin</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="score_huruf">Score Huruf</string>
    <string name="score_angka">Score Angka</string>

    <string name="canvasContentDescription">Mini Paint is a simple line drawing app.
   Drag your fingers to draw. Rotate the phone to clear.</string>
    <string name="title_home">Home</string>
    <string name="title_user">User</string>
    <string name="menu_submit">Submit</string>
    <string name="menu_restart">Restart</string>
    <string name="retypepassword">Masukkan Ulang Password</string>
    <string name="masuk">Masuk</string>
    <string name="level_angka">Level Angka</string>
    <string name="soal_dipilih">soal dipilih</string>
    <string name="soal">Soal</string>
    <string name="menunggu_selesai">Menunggu Player Lain Selesai</string>
    <string name="gabung">Gabung</string>
    <string name="menunggu_player_lain">Menunggu player lain</string>
    <string name="level_huruf">Level Huruf</string>
    <string name="daftar_game_yang_diikuti">Daftar Game Yang Diikuti</string>
    <string name="id_room">ID Room</string>
    <string name="jenis">Jenis</string>
    <string name="pembuat_room">Pembuat Room</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="belum_memiliki_akun">Belum memiliki akun</string>
    <string name="daftar">DAFTAR</string>
    <string name="cari_player">CARI PLAYER</string>
    <string name="mulai">MULAI</string>
    <string name="acak_soal">ACAK SOAL</string>
    <string name="angka_multiplayer">Angka Multiplayer</string>
    <string name="level_0">Level 0</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="huruf_multiplayer">Huruf Multiplayer</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun</string>
    <string name="papan_skor">Papan Skor</string>
    <string name="skor_multiplayer">Skor Multiplayer</string>
    <string name="skor">Skor</string>
    <string name="no">No</string>
    <string name="durasi">Durasi</string>
    <string name="daftar_pemain">Daftar Pemain</string>
    <string name="ayo_belajar_bersama">AYO BELAJAR BERSAMA</string>
    <string name="level">Level</string>
    <string name="ayo_belajar_berhitung">Ayo Belajar Berhitung</string>
    <string name="ayo_belajar_menulis_huruf">Ayo Belajar Menulis Huruf</string>
    <string name="berhasil">Berhasil</string>
    <string name="skor_anda">Skor Anda</string>
    <string name="_0">0</string>
    <string name="kembali_ke_daftar_soal">Kembali ke daftar soal</string>
    <string name="_100">100</string>
    <string name="id">id</string>
    <string name="id_user">id_user</string>
    <string name="mode">mode</string>
    <string name="detail_skor_multiplayer">Detail Skor Multiplayer</string>
    <string name="ID">ID</string>
    <string name="levelk">level</string>
    <string name="soal_angka">Soal Angka</string>
    <string name="soal_huruf">Soal Huruf</string>
    <string name="multi_huruf">Bermain Multiplayer Huruf</string>
    <string name="multi_angka">Bermain Multiplayer Angka</string>
    <string name="buat_room">Buat Room</string>
    <string name="id_game">ID Game</string>
    <string name="cara_bermain">Cara Bermain</string>

    <string-array name="Gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <string name="rule_single">
        1. Memilih menu belajar\n
        2. Memilih mode belajar single player\n
        3. Memilih level soal\n
        4. Memilih nomor soal\n
        5. Menuliskan jawaban pada kotak putih sesuai urutan\n
        6. Menekan tombol reset jika salah menulis jawaban\n
        7. Menekan tombol submit jika sudah menuliskan jawaban
    </string>

</resources>