<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_quiz"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_rank"
            android:title="@string/menu_rank" />
        <item
            android:id="@+id/nav_score"
            android:title="@string/menu_score" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
    </group>
</menu>