<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tugasakhir.welearn.presentation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.tugasakhir.welearn.presentation.ui.quiz.QuizFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.tugasakhir.welearn.presentation.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_score"
        android:name="com.tugasakhir.welearn.presentation.ui.score.ScoreFragment"
        android:label="@string/menu_score"
        tools:layout="@layout/fragment_score" />
    <fragment
        android:id="@+id/nav_rank"
        android:name="com.tugasakhir.welearn.presentation.ui.rank.RankFragment"
        android:label="@string/menu_rank"
        tools:layout="@layout/fragment_rank" />
</navigation>