<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_bg"
    tools:context=".presentation.view.huruf.multiplayer.MatchHurufFragment">

    <TextView
        android:id="@+id/tv_id_room"
        android:layout_width="137dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tf_rounded_corners"
        android:fontFamily="@font/rubik_semi_bold"
        android:gravity="center"
        android:text="@string/id_room"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_huruf_acak"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_huruf"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_rounded_green"
        android:text="@string/mulai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_room"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_huruf_acak"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_rounded_green"
        android:text="@string/acak_soal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ba_level3"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250sp"
        android:layout_height="71sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/title_list"
        android:fontFamily="@font/rubik_semi_bold"
        android:gravity="center"
        android:paddingHorizontal="20sp"
        android:text="@string/huruf_multiplayer"
        android:textColor="@color/color_black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ba_level0"
        android:layout_width="93sp"
        android:layout_height="66sp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_grid"
        android:fontFamily="@font/rubik_semi_bold"
        android:text="@string/level_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ba_level1"
        android:layout_width="93sp"
        android:layout_height="66sp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/bg_grid"
        android:fontFamily="@font/rubik_semi_bold"
        android:text="@string/level_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ba_level3"
        android:layout_width="93sp"
        android:layout_height="66sp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="75dp"
        android:background="@drawable/bg_grid"
        android:fontFamily="@font/rubik_semi_bold"
        android:text="@string/level_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toEndOf="@+id/ba_level2"
        app:layout_constraintTop_toBottomOf="@+id/ba_level1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ba_level2"
        android:layout_width="93sp"
        android:layout_height="66sp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_grid"
        android:fontFamily="@font/rubik_semi_bold"
        android:text="@string/level_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ba_level1" />

</androidx.constraintlayout.widget.ConstraintLayout>