<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">


    <TextView
        android:id="@+id/tv_no_huruf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/_0"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nama_single"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/nama"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_value_skor_huruf"
        app:layout_constraintStart_toEndOf="@+id/tv_no_huruf"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_value_skor_huruf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/_100"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>