<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <View
        android:id="@+id/view11"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_no_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/_0"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view11" />

    <TextView
        android:id="@+id/tv_nama_single"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/nama"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toStartOf="@+id/tv_skor_single"
        app:layout_constraintStart_toEndOf="@+id/tv_no_single"
        app:layout_constraintTop_toTopOf="@+id/view11" />

    <TextView
        android:id="@+id/tv_skor_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/_100"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view11" />


</androidx.constraintlayout.widget.ConstraintLayout>