<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_screen"
    tools:context=".presentation.ui.auth.LoginActivity">


    <EditText
        android:id="@+id/username_login"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/tf_rounded_corners"
        android:drawableStart="@drawable/draw_left_user"
        android:hint="@string/masukkan_username"
        app:hintEnabled="false"
        android:textSize="12sp"
        android:fontFamily="@font/rubik_semi_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        app:hintEnabled="false"
        android:textSize="12sp"
        android:inputType="textPassword"
        android:hint="@string/masukkan_password"
        android:drawableStart="@drawable/draw_left_password"
        android:fontFamily="@font/rubik_semi_bold"
        android:background="@drawable/tf_rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_login">

    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/rubik_semi_bold"
        android:text="@string/masuk"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_semi_bold"
        android:shadowColor="#FFFFFF"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="4"
        android:text="@string/belum_memiliki_akun"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_welearn" />

    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_register"
        android:layout_width="83dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_login_register"
        android:fontFamily="@font/rubik_semi_bold"
        android:text="@string/daftar"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toEndOf="@+id/tv_reg"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>