<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.score.ui.ScoreAngkaUserFragment">

    <View
        android:id="@+id/view3"
        android:layout_width="341dp"
        android:layout_height="361dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/rectangle_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_score_angka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/rubik_semi_bold"
        android:text="@string/berhasil"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="156dp"
        android:layout_height="111dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/score"
        app:layout_constraintBottom_toTopOf="@+id/status_score_angka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/skor_anda"
        android:textColor="@color/black"
        android:fontFamily="@font/rubik_semi_bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/status_score_angka" />

    <TextView
        android:id="@+id/tv_score_user_angka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/_0"
        android:textSize="45sp"
        android:fontFamily="@font/rubik_semi_bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/btn_home"
        android:layout_width="83dp"
        android:layout_height="92dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/back_daftar_soal_angka"
        android:layout_width="154dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/main_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="137dp"
        android:layout_height="58dp"
        android:text="@string/kembali_ke_daftar_soal"
        android:textAlignment="center"
        android:textSize="25sp"
        android:fontFamily="@font/rubik_regular"
        app:layout_constraintBottom_toBottomOf="@+id/back_daftar_soal_angka"
        app:layout_constraintEnd_toEndOf="@+id/back_daftar_soal_angka"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="@+id/back_daftar_soal_angka"
        app:layout_constraintTop_toTopOf="@+id/back_daftar_soal_angka"
        app:layout_constraintVertical_bias="0.538" />

</androidx.constraintlayout.widget.ConstraintLayout>